02. usefull-things-109-products. UI.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,71 @@
 </head>
 
 <body>
-    start
+    <div id="container"></div>
+
+    <div class="modal">
+        <div class="col product-view">
+            <div class="close-btn">
+                <div class="close">
+                    <ion-icon name="close-outline"></ion-icon>
+                </div>
+            </div>
+
+            <div class="product-img">
+                <div class="product-img-container">
+                    <img src="./assets/images/img1.jpg" alt="">
+                </div>
+            </div>
+            <div class="product-name">
+                <div class="name">
+                    <h1>Title & 1</h1>
+                    <p>Lorem ipsum dolor sit.</p>
+                </div>
+                <div class="cart-btn">
+                    <button>Add to Cart</button>
+                </div>
+            </div>
+        </div>
+
+        <div class="col product-info">
+            <div>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Mollitia minus veritatis expedita odit
+                    dolorem earum quod, deserunt porro unde molestias.
+                </p>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur
+                    expedita quod adipisci nemo dolorum aut velit, saepe nihil odio.
+                    Recusandae voluptates ratione impedit neque, aperiam minus esse
+                    debitis a sed assumenda, nemo laudantium. Doloribus, iusto.
+                </p>
+            </div>
+
+            <div class="suggestions">
+                <p>User also choose</p>
+                <div class="box">
+                    <img src="./assets/images/img1.jpg" alt="">
+                    <p>Lorem ipsum dolor sit.</p>
+                    <h1>Title & 1</h1>
+                </div>
+                <div class="box">
+                    <img src="./assets/images/img2.jpg" alt="">
+                    <p>Lorem ipsum dolor sit.</p>
+                    <h1>Title & 2</h1>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
+
+    <script type="module" src="https://cdn.jsdelivr.net/npm/ionicons@latest/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://cdn.jsdelivr.net/npm/ionicons@latest/dist/ionicons/ionicons.js"></script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.7/Draggable.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.7/gsap.min.js"></script>
 
     <script src="./assets/js/main.js"></script>
 </body>
